# eatsome-printer-daemon

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CODE_QUALITY.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md  auto-updater-setup.md  escpos-decision.md  github-actions-setup.md  sentry-setup.md
install-scripts/: README.md
install-scripts/linux/: PACKAGE-BUILD.md  eatsome-printer.service  install-service.sh  postinst  postrm  rpm-postinstall.sh  rpm-postuninstall.sh
install-scripts/macos/: com.eatsome.printer-service.plist  install-launchagent.sh
install-scripts/windows/: EatsomePrinterService.xml  install-task.ps1
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  udev-rules.conf
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auth.rs  circuit_breaker.rs  config.rs  discovery.rs  errors.rs  escpos.rs  job_poller.rs  main.rs  printer.rs  queue.rs  realtime.rs  routing.rs  sentry_init.rs  status.rs  supabase_client.rs  telemetry.rs  updater.rs
src-tauri/tests/: README.md  auth_jwt_test.rs  circuit_breaker_test.rs  escpos_commands_test.rs  print_flow_test.rs  queue_persistence_test.rs
src-tauri/tests/common/: mod.rs
src/components/: ConfirmDialog.tsx  DiscoveryModal.css  DiscoveryModal.tsx  MainDashboard.css  MainDashboard.tsx  SetupWizard.css  SetupWizard.tsx
src/components/wizard/: AssignmentStep.tsx  AuthenticationStep.tsx  CompleteStep.tsx  ConnectStep.tsx  DiscoveryStep.tsx  SuccessStep.tsx  WelcomeStep.tsx
src/schemas/: config.ts
